fixed more posts logic and spacing

--- a/src/components/journal/more-articles/more-articles.module.scss
+++ b/src/components/journal/more-articles/more-articles.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/includes/variables';
 
 .more_articles{
-    padding: 3rem 1rem 1.5rem;
+    padding: 0rem 1rem 1.5rem;
 }
 
 .post_card{
