--- a/src/pages/journal/journal.module.scss
+++ b/src/pages/journal/journal.module.scss
@@ -1,4 +1,9 @@
 .journal{
+    :global{
+        .related-articles + .more-articles{
+            padding-top: 3rem;
+        }
+    }
     @media (min-width:960px){
         :global{
             .container{
